Add thumbnail and content image attached
